--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     background: rgb(199, 22, 34);
     font-family: 'Poppins';
     font-weight: bold;
+    
 }
 
 nav ul {
@@ -28,45 +29,55 @@ nav ul {
     justify-content: flex-end;
 }
 
+nav ul li img {
+    width: 30px;
+    height: 30px;
+    margin-left: 2px;
+    margin-top: 6px;
+    margin-right: 6px;
+}
 .container {
     font-family: 'Poppins';
-    font-weight: bold;
-    font-size: 40px;
-    text-align: center;
+    margin: 0 auto;
+}
+.card-title {
+    font-size: 20px;
 }
 
-.gallery {
-    width: 100%;
-    height: 500px;
-    background-image: url(img/5_5.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+.card-text {
+    font-size: 15px;
 }
-.element {
-    display: inline-block;
-    width: 441px;;
-    height: 400px;
-    font-family:'Poppins';
-    margin-top: 50px;
+.card-img-top {
+    max-height: 150px;
+    margin: 0 auto;
 }
 
-.element img {
-    margin-left: 90px;
+.section {
+    font-size: 30px;
+    text-align: center;    
 }
 
-.element article {
-    text-align: center;
-    margin-left: 15px;
-    margin-right: 15px;
-    font-size: 16px; 
+.form-row {
+    margin-top: 62px;
 }
 
-.element article a {
-    font-size: 25px;
-    font-weight: bold;
+.btn {
+    background-color: rgb(199, 22, 34);
+    border-color: rgb(199, 22, 34);
 }
 
-.wojtek img, .marcin img, .filip img {
-    margin-left: 100px;
+.btn:hover {
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+}
+
+.row {
+    margin-left: 10px;
+    margin-right: none;
+    border: none;
+}
+
+.form-row {
+    margin-left: 220px;
 }
