--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ nav ul li img {
 
 .card{
     opacity: 0;
-    transition: 3s;
+    transition: 2s;
 }
 .card.show {
     opacity: 1;
@@ -63,7 +63,9 @@ nav ul li img {
 
 .section {
     font-size: 30px;
-    text-align: center;    
+    font-weight: bold;
+    text-align: center;
+    margin-top: 50px;    
 }
 
 .col-sm {
