--- a/main.css
+++ b/main.css
@@ -140,3 +140,15 @@ nav ul li img {
     color: rgb(255, 255, 255);
     border-color: rgb(0, 0, 0);
 }
+
+@media only screen and (max-width: 375px ) {
+nav ul {
+        display: flex;
+        flex-direction: column;
+    }
+nav ul li {
+    display: flex;
+    justify-content: center;
+    margin-left: 0;
+}
+}
