--- a/main.css
+++ b/main.css
@@ -119,11 +119,7 @@ nav ul li img {
       margin-top: 20px;
   }
 
-.form-row {
-    margin-left: 220px;
-}
-
-.send-button {
+  .send-button {
     border: 1px solid rgb(199, 22, 34);
     background-color: rgb(199, 22, 34);
     border-radius: .25rem;
@@ -139,6 +135,10 @@ nav ul li img {
     background: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border-color: rgb(0, 0, 0);
+}
+
+.form-group {
+    margin: auto;
 }
 
 @media only screen and (max-width: 375px ) {
