--- a/main.css
+++ b/main.css
@@ -29,14 +29,6 @@ nav ul {
     display: flex;
     justify-content: flex-end;
 }
-
-nav ul li img {
-    width: 30px;
-    height: 30px;
-    margin-left: 2px;
-    margin-top: 6px;
-    margin-right: 6px;
-}
 .container {
     font-family: 'Poppins';
     margin: 0 auto;
@@ -68,14 +60,6 @@ nav ul li img {
     margin: 0 auto;
 }
 
-.col-sm{
-    opacity: 0;
-    transition: 2s;
-}
-.col-sm.show {
-    opacity: 1;
-}
-
 .section {
     font-size: 30px;
     font-weight: bold;
@@ -85,7 +69,7 @@ nav ul li img {
 
 .col-sm {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 100px;
 }
 
 .form-row {
@@ -119,27 +103,38 @@ nav ul li img {
       margin-top: 20px;
   }
 
-  .send-button {
-    border: 1px solid rgb(199, 22, 34);
-    background-color: rgb(199, 22, 34);
-    border-radius: .25rem;
-    padding: .375rem .75rem;
-    color: white;
-    text-decoration: none;
+  .foot {
+      background: rgb(199, 22, 34);
+      margin-top: 200px;
+      height: 40px;
+  }
+  .foot-icons {
     display: flex;
     justify-content: center;
-}
+  }
+  .foot-icons img {
+      width: 30px;
+      height: 30px;
+      margin:5px;
+  }
+  .circles {
+    width: 75px;
+    height: 75px;
+    background: rgb(199, 22, 34);
+    position: fixed;
+    bottom: 8px;
+    right: 8px;
+    border-radius: 50%;
+    margin-left: 5px;
+    box-shadow: 2px 1px rgb(134, 134, 134);
+    text-align: center;
+    z-index: 2;
+  }
 
-.send-button:hover {
-    text-decoration: none;
-    background: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    border-color: rgb(0, 0, 0);
-}
-
-.form-group {
-    margin: auto;
-}
+  .circles-text {
+    color: rgb(250, 250, 250);
+    font-size: 50px;
+  }
 
 @media only screen and (max-width: 375px ) {
 nav ul {
