--- a/main.css
+++ b/main.css
@@ -136,6 +136,18 @@ nav ul {
     font-size: 35px;
   }
 
+  .foot-icons2 {
+      background: rgb(199, 22, 34);
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+  }
+
+  .foot-icons2 a {
+      text-decoration: none;
+      color: rgb(250, 250, 250);
+  }
+
 @media only screen and (max-width: 375px ) {
 nav ul {
         display: flex;
