--- a/main.css
+++ b/main.css
@@ -34,6 +34,10 @@ nav ul {
     margin: 0 auto;
 }
 
+#read-more {
+    text-align: justify;
+}
+
 .container p {
     margin-top: 70px;
     text-align: justify;
@@ -135,6 +139,12 @@ nav ul {
     color: rgb(250, 250, 250);
     font-size: 35px;
   }
+
+  #read-more {
+      display: none;
+  }
+
+
 @media only screen and (max-width: 375px ) {
 nav ul {
         display: flex;
