--- a/main-kontakt.css
+++ b/main-kontakt.css
@@ -18,3 +18,13 @@ img {
     display: block;
     margin: 0 auto;
 }
+
+@media only screen and (max-width: 375px ) {
+    a {
+        font-size: 20px;
+    }
+    img {
+        width: 50px;
+        height: 50px;
+    }
+}
