--- a/onas.css
+++ b/onas.css
@@ -1,4 +1,16 @@
 .container-onas {
     font-family: 'Poppins';
     margin: 0 auto;
+    text-align: justify;
+    max-width: 800px;
+    background: rgb(250, 250, 250);
+}
+
+body {
+    background: url(img/2.jpg);
+    background-size: cover;
+}
+
+p {
+    padding: 20px;
 }
