--- a/felieton.css
+++ b/felieton.css
@@ -9,8 +9,9 @@
 
 body {
     background: url(img/Ole.jpg);
-    background-size: cover;
-    background-position: left;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
 }
 
 p {
